Fix alignment of Psasword box

--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -54,3 +54,7 @@
     padding: 5px;
     width: 250px;
 }
+
+#password {
+    margin-left: 0px;
+}
